# CryptoExchange_server

./: Makefile  README.md  data.db  pyproject.toml  test_database.db
app/: app.py  database.py  database_interaction.py  init_database.py  local_info.py
tests/: conftest.py  test_app.py
